Endret struktur til maven, ryddet opp i mapper og la til 3 fold repetiotion med PositionHistory